# alias_microservices

./: .dockerignore  .env.example  .gitignore  README.md  compose.dev.yaml  compose.prod.yaml  compose.yaml  docker-compose-prod.yml  docker-compose.cards.yml  docker-compose.packs.yml  docker-compose.yml  main.py
apisix/: Dockerfile  (+2 more)
services/auth_service/: Dockerfile  pyproject.toml
services/auth_service/alembic/: env.py
services/auth_service/alembic/versions/: 2026-04-08_8ccc17c18fc8.py  2026-04-09_11ddaebacd59.py  2026-04-09_4602e88e3b64.py
services/auth_service/src/auth/: dependencies.py  main.py  settings.py
services/auth_service/src/auth/certs/: jwt-private.pem  jwt-public.pem
services/auth_service/src/auth/database/: db.py  models.py
services/auth_service/src/auth/exc/: exception_handlers.py  exceptions.py
services/auth_service/src/auth/grpc/: server.py  servicer.py
services/auth_service/src/auth/repositories/: repository.py
services/auth_service/src/auth/schemas/: schemas.py
services/auth_service/src/auth/services/: service.py  utils.py
services/cards_service/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  pytest.ini
services/cards_service/alembic/: env.py
services/cards_service/alembic/versions/: 2026-01-23_bc461b3837b3.py  2026-01-30_a95e2f1507c5.py
services/cards_service/src/cards/: dependencies.py  main.py  repository.py  service.py  settings.py
services/cards_service/src/cards/api/: repository.py  router.py  service.py
services/cards_service/src/cards/constants/: packs_constants.py
services/cards_service/src/cards/database/: db.py  dependencies.py  models.py
services/cards_service/src/cards/exc/: exception_handlers.py  exceptions.py
(+183 files in other folders)
