[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auth-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"

dependencies = [
    "aio-pika>=9.5.8",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "auth-grpc>=0.1.1",
    "bcrypt>=5.0.0",
    "cryptography>=46.0.7",
    "fastapi>=0.128.0",
    "greenlet>=3.3.0",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-sdk>=1.39.1",
    "packs-grpc>=0.1.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.1",
    "structlog>=25.5.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build]
packages = ["src/auth"]
